Revert LIVIJUKU-803 - tyylien muutos tehty virheellisesti. Tyylimuutos ps-0 pitäisi vaikuttaa vain read-only tilaan.

--- a/app/scripts/components/ely/maararahatarpeet/index.html
+++ b/app/scripts/components/ely/maararahatarpeet/index.html
@@ -10,8 +10,7 @@
                ng-model="hakemus.ely.kaupunkilipputuki"
                ng-disabled="isReadonly()"
                placeholder="Siirtymäajan sopimukset (€)"
-               select-on-click
-               class="Ps-0 cursor-auto" />
+              select-on-click/>
       </form-group>
     </div>
     <div class="col-md-3">
@@ -21,8 +20,7 @@
                ng-model="hakemus.ely.seutulipputuki"
                ng-disabled="isReadonly()"
                placeholder="Joukkoliikennetuki kunnille (€)"
-               select-on-click
-               class="Ps-0 cursor-auto" />
+               select-on-click/>
       </form-group>
     </div>
     <div class="col-md-3">
@@ -32,8 +30,7 @@
                ng-model="hakemus.ely.ostot"
                ng-disabled="isReadonly()"
                placeholder="Liikenteen ostot (€)"
-               select-on-click
-               class="Ps-0 cursor-auto" />
+               select-on-click/>
       </form-group>
     </div>
     <div class="col-md-3">
@@ -43,8 +40,7 @@
                ng-model="hakemus.ely.kehittaminen"
                ng-disabled="isReadonly()"
                placeholder="Kehittäminen (€)"
-               select-on-click
-               class="Ps-0 cursor-auto" />
+               select-on-click/>
       </form-group>
     </div>
   </div>
@@ -65,7 +61,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr ng-repeat="maararahatarve in maararahatarpeet track by $index" ng-form class="cursor-auto bg-c-t__hover">
+        <tr ng-repeat="maararahatarve in maararahatarpeet track by $index" ng-form>
           <td>
             <div uib-tooltip="{{maararahatarvetyyppiTooltip(maararahatarve.maararahatarvetyyppitunnus)}}"
                  tooltip-enable="maararahatarvetyyppiTooltip(maararahatarve.maararahatarvetyyppitunnus)"
@@ -82,8 +78,7 @@
                      required ng-currency="" numeric-only="" max="9999999999.99"
                      noenter select-on-click
                      ng-model="maararahatarve.sidotut" ng-disabled="isReadonly()"
-                     placeholder="Sidotut"
-                     class="Ps-0 cursor-auto">
+                     placeholder="Sidotut">
             </form-group-compact>
           </td>
           <td>
@@ -92,8 +87,7 @@
                      required ng-currency="" numeric-only="" max="9999999999.99"
                      noenter select-on-click
                      ng-model="maararahatarve.uudet" ng-disabled="isReadonly()"
-                     placeholder="Uudet"
-                     class="Ps-0 cursor-auto">
+                     placeholder="Uudet">
             </form-group-compact>
           </td>
           <td>
@@ -102,8 +96,7 @@
                      required ng-currency="" numeric-only="" max="9999999999.99"
                      noenter select-on-click
                      ng-model="maararahatarve.tulot" ng-disabled="isReadonly()"
-                     placeholder="Tulot"
-                     class="Ps-0 cursor-auto">
+                     placeholder="Tulot">
             </form-group-compact>
           </td>
           <td>
@@ -113,8 +106,7 @@
                      maxlength="2000"
                      ng-model="maararahatarve.kuvaus"
                      ng-disabled="isReadonly()"
-                     placeholder="Kuvaus"
-                     class="Ps-0 cursor-auto">
+                     placeholder="Kuvaus">
             </form-group-compact>
           </td>
         </tr>
