--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -28,7 +28,7 @@ h3
 .form-control[disabled],
 .form-control[readonly],
 fieldset[disabled] .form-control
-  cursor: not-allowed
+  //cursor: not-allowed
   background-color: #fff
   opacity: 1
   border-color: #fff
