LIVIJUKU-844 - kilapilutusten aikajana näytön tyylimuutokset + ng-tags-input komponentin tyylimuutokset.

--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -4,6 +4,7 @@
 @import './nv.d3.css'
 @import './xeditable.css'
 @import './nya-bs-select.css'
+@import './ng-tags-input.styl'
 @import '../scripts/components/tab'
 @import '../scripts/components/table'
 @import '../scripts/components/panel'
