--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -3,8 +3,6 @@
 @import '../../node_modules/bootstrap/dist/css/bootstrap.min.css'
 @import '../../node_modules/angular-toastr/dist/angular-toastr.css'
 @import '../../node_modules/angularjs-slider/dist/rzslider.css'
-@import '../../node_modules/ng-tags-input/build/ng-tags-input.css'
-@import '../../node_modules/ng-tags-input/build/ng-tags-input.bootstrap.css'
 @import '_variables'
 @import '_components'
 
@@ -370,6 +368,9 @@ textarea
 
 .Ms-0
   margin-left: 0 !important
+
+.Mb-lg
+  margin-bottom: 5em
 
 .Mb-md
   margin-bottom: 1em
