--- a/app/scripts/views/kilpailutukset/kilpailutukset.html
+++ b/app/scripts/views/kilpailutukset/kilpailutukset.html
@@ -1,18 +1,14 @@
 <div class="container">
 
-    <div class="page-header">
+  <h1 class="Mb-md">Kilpailutukset
+  <button
+    ng-click="newKilpailutus()"
+    class="btn btn-success btn-lg pull-right">
+    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Lisää uusi kilpailutus
+  </button>
+  </h1>
 
-        <h1 class="Mb-sm">Kilpailutukset
-        <button
-          ng-click="newKilpailutus()"
-          class="btn btn-success btn-lg pull-right">
-          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Lisää uusi kilpailutus
-        </button>
-        </h1>
-    </div>
-
-
-  <form style="margin-bottom: 2em;">
+  <form class="Mb-lg">
   	<div class="row">
 	  	<form-group label="Toimivaltainen viranomainen" class="col-xs-12 col-sm-6 col-md-6">
         <tags-input id="organisaatio-filter" name="organisaatio-filter"
@@ -83,7 +79,7 @@
     </div>
   </form>
 
-  <div class="row" style="margin-top: 5em; padding-bottom: 1em;">
+  <div class="row Mb-md">
       <div class="col-md-2">
         <div style="width: 20px; height: 20px; background-color: #3385D6; float: left;">
           &nbsp;
