LIVIJUKU-867 Lisätty hover-tyyli aikajanalla näkyvälle kilpailutukselle, jotta käyttäjä ymmärtää todennäköisemmin klikata kilpailutuspalkkia.

--- a/app/styles/vis.css
+++ b/app/styles/vis.css
@@ -555,6 +555,11 @@ input.vis-configuration.vis-config-range:focus::-ms-fill-upper {
   padding: 5px;
 }
 
+.vis-item-overflow:hover {
+  background-color: rgba(0,0,0,0.1);
+  cursor: pointer;
+}
+
 .vis-item .vis-delete {
   background: url('img/timeline/delete.png') no-repeat center;
   position: absolute;
