--- a/app/scripts/components/sidebar/index.html
+++ b/app/scripts/components/sidebar/index.html
@@ -1,17 +1,17 @@
 <div class="sidebar">
   <ul>
     <li ng-show="sallittu(user, 'view-hakemuskausi')">
-      <a ui-sref-active="is-active" ui-sref="app.kasittelija.hakemuskaudenhallinta()">
+      <a ui-sref-active="is-active" ui-sref="app.kasittelija.hakemuskaudenhallinta()" ng-click="uncollapse()">
         Hakemuskaudet
       </a>
     </li>
     <li ng-show="sallittu(user, 'view-oma-hakemus')">
-      <a ui-sref-active="is-active" ui-sref="app.hakija.hakemukset.omat()">
+      <a ui-sref-active="is-active" ui-sref="app.hakija.hakemukset.omat()" ng-click="uncollapse()">
         Omat hakemukset
       </a>
     </li>
     <li ng-show="sallittu(user, 'view-hakemus')">
-      <a ui-sref-active="is-active" ui-sref="app.yhteinen.hakemukset.list({tyyppi: 'AH0'})">
+      <a ui-sref-active="is-active" ui-sref="app.yhteinen.hakemukset.list({tyyppi: 'AH0'})" ng-click="uncollapse()">
         Kaikki hakemukset
       </a>
     </li>
@@ -19,23 +19,30 @@
   <ul ng-show="sallittu(user, 'view-hakemus')">
     <li ng-show="sallittu(user, 'view-hakemus')">Tunnusluvut</li>
     <li ng-show="sallittu(user, 'view-hakemus')">
-      <a ui-sref-active="is-active" ui-sref="app.tunnusluku.syottaminen()">
+      <a ui-sref-active="is-active" ui-sref="app.tunnusluku.syottaminen()" ng-click="uncollapse()">
         Tunnuslukujen syöttäminen
       </a>
     </li>
     <li>
-      <a ui-sref-active="is-active" ui-sref="app.tunnusluku.valtionavustuskuvaajat()">
+      <a ui-sref-active="is-active" ui-sref="app.tunnusluku.valtionavustuskuvaajat()" ng-click="uncollapse()">
         Valtionavustuskuvaajat
       </a>
     </li>
     <li>
-      <a ui-sref-active="is-active" ui-sref="app.tunnusluku.tunnuslukukuvaajat()">
+      <a ui-sref-active="is-active" ui-sref="app.tunnusluku.tunnuslukukuvaajat()" ng-click="uncollapse()">
         Tunnuslukukuvaajat
       </a>
     </li>
     <li>
-      <a ui-sref-active="is-active" ui-sref="app.tunnusluku.omakuvaaja()">
+      <a ui-sref-active="is-active" ui-sref="app.tunnusluku.omakuvaaja()" ng-click="uncollapse()">
         Oma kuvaaja tunnusluvuista
+      </a>
+    </li>
+  </ul>
+  <ul>
+    <li>
+      <a ui-sref-active="is-active" ui-sref="app.kilpailutukset()" ng-click="uncollapse()">
+        Kilpailutukset
       </a>
     </li>
   </ul>
@@ -49,18 +56,18 @@
       </div>
     </li>
     <li>
-      <a ui-sref-active="is-active" ui-sref="app.yhteinen.asetukset">
+      <a ui-sref-active="is-active" ui-sref="app.yhteinen.asetukset" ng-click="uncollapse()">
         Asetukset
       </a>
     </li>
-    <li><a ui-sref-active="is-active" ui-sref="app.yhteinen.kayttajatiedot">
+    <li><a ui-sref-active="is-active" ui-sref="app.yhteinen.kayttajatiedot" ng-click="uncollapse()">
       JUKUn käyttäjät
     </a></li>
-    <li ng-hide="sallittu(user, 'view-hakemuskausi')"><a ui-sref-active="is-active" ui-sref="app.yhteinen.asiakastuki">
+    <li ng-hide="sallittu(user, 'view-hakemuskausi')"><a ui-sref-active="is-active" ui-sref="app.yhteinen.asiakastuki" ng-click="uncollapse()">
       Asiakastuki
     </a></li>
     <li>
-      <a class="navbartxt" href="{{logoutUrl}}">
+      <a class="navbartxt" href="{{logoutUrl}}" ng-click="uncollapse()">
         Kirjaudu ulos
       </a>
     </li>
