LIVIJUKU-826 Lisätty riittävästi väljyyttä kaikkien kuvaajien väliin ja muokattu valinnan käsittävän kuvaajan (H/M) valintaelementtikokonaisuuden tyylejä.

--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -369,6 +369,9 @@ textarea
 .Ms-0
   margin-left: 0 !important
 
+.Mb-xs
+  margin-bottom: 0.5em !important
+
 .Mb-lg
   margin-bottom: 5em
 
@@ -380,3 +383,16 @@ textarea
 
 .Mt-md
   margin-top: 1em
+
+.Mb-xl
+  margin-bottom: 2em
+
+.block
+  display: block !important
+
+.hm-legend
+  background-color: #f5f5f5
+  width: 50%
+  padding-top: 1em
+  padding-bottom: 1em
+  margin: 0 auto
