--- a/app/scripts/views/tunnusluvut/raportit-valtionavustuskuvaajat.html
+++ b/app/scripts/views/tunnusluvut/raportit-valtionavustuskuvaajat.html
@@ -20,7 +20,7 @@
     Kaikki välilehdellä ja ELY-välilehdellä tämä tuki sisältyy ELY:jen saamaan tukeen.
   </p>
 
-  <div class="row">
+  <div class="row Mb-xl">
     <nvd3 options='avustus.options' data='avustus.data' api="avustus.api"></nvd3>
     <p ng-if="organisaatiolaji === 'ALL' || organisaatiolaji === 'ELY'" class="text-center">Vuodelta 2014 puuttuu ELY-keskusten haettu avustussumma</p>
     <a ng-csv="avustus.csv" class="pull-right lataacsv"
@@ -28,12 +28,12 @@
        field-separator=";" add-bom="true" decimal-separator=","><span class="glyphicon glyphicon-save"></span> Lataa CSV
     </a>
   </div>
-  <br>
-  <div class="row">
+
+  <div class="row Mb-xl">
     <form id="avustustyyppi-valinta-form" name="avustustyyppi-valinta-form" class="form-inline tunnusluku-filter-form">
-      <fieldset ng-disabled="organisaatiolaji === 'KS3'">
+      <fieldset ng-disabled="organisaatiolaji === 'KS3'" class="text-center hm-legend">
         <div class="form-group">
-          <label for="avustustyyppi" class="radio inline control-label">Valitse avustustieto jota halutaan tarkastella organisaatioittain:</label>
+          <label for="avustustyyppi" class="radio control-label block Mb-xs">Valitse avustustieto jota halutaan tarkastella organisaatioittain:</label>
           <label class="radio-inline">
             <input type="radio" name="avustustyyppi" id="avustustyyppi-h" value="H" ng-model="avustustyyppi"> Haettu avustus
           </label>
@@ -50,7 +50,15 @@
        field-separator=";" add-bom="true" decimal-separator=","><span class="glyphicon glyphicon-save"></span> Lataa CSV
     </a>
   </div>
-  <br>
+
+  <div class="row Mb-xl">
+    <nvd3 options='avustusdetail.options' data='avustusdetail.data' api="avustusdetail.api"></nvd3>
+    <a ng-csv="avustusdetail.csv" class="pull-right lataacsv"
+       filename="avustus-organisaatioittain.csv"
+       field-separator=";" add-bom="true" decimal-separator=","><span class="glyphicon glyphicon-save"></span> Lataa CSV
+    </a>
+  </div>
+
   <div class="row">
     <nvd3 options='avustusperasukas.options' data='avustusperasukas.data' api="avustusperasukas.api"></nvd3>
     <a ng-csv="avustusperasukas.csv" class="pull-right lataacsv"
