--- a/app/scripts/components/statisticDropdown/index.html
+++ b/app/scripts/components/statisticDropdown/index.html
@@ -1,28 +1,23 @@
 <div class="statistic-dropdown dropdown">
   <div class="dropdown-toggle__wrapper header__link">
     <a id="tunnusluvut" class="dropdown-toggle">
-      Tunnusluvut
+      Tilastot
     </a>
   </div>
   <div class="dropdown-menu-container">
     <ul class="dropdown-menu">
       <li>
-        <a id="tunnusluvut-syottaminen" ui-sref-active="is-active" ui-sref="app.tunnusluku.syottaminen()">
-          Tunnuslukujen syöttäminen
-        </a>
-      </li>
-      <li>
-        <a id="tunnusluvut-valtionavustuskuvaajat" ui-sref-active="is-active" ui-sref="app.tunnusluku.valtionavustuskuvaajat()">
+        <a id="tunnusluvut-valtionavustuskuvaajat" ui-sref-active="is-active" ui-sref="app.tilastot.valtionavustuskuvaajat()">
           Valtionavustuskuvaajat
         </a>
       </li>
       <li>
-        <a id="tunnusluvut-tunnuslukukuvaajat" ui-sref-active="is-active" ui-sref="app.tunnusluku.tunnuslukukuvaajat()">
+        <a id="tunnusluvut-tunnuslukukuvaajat" ui-sref-active="is-active" ui-sref="app.tilastot.tunnuslukukuvaajat()">
           Tunnuslukukuvaajat
         </a>
       </li>
       <li>
-        <a id="tunnusluvut-omakuvaaja" ui-sref-active="is-active" ui-sref="app.tunnusluku.omakuvaaja()">
+        <a id="tunnusluvut-omakuvaaja" ui-sref-active="is-active" ui-sref="app.tilastot.omakuvaaja()">
           Oma kuvaaja tunnusluvuista
         </a>
       </li>
