LIVIJUKU-876 Teksti- ja rakennemuutoksia headeriin ja mobiilimenuun.

--- a/app/scripts/components/header/index.html
+++ b/app/scripts/components/header/index.html
@@ -39,7 +39,7 @@
 
         <li class="header__button" ng-class="{'is-active': tunnusluvutTabActive()}">
           <a id="tunnusluvut-syottaminen" class="header__link" ui-sref="app.tunnusluku.syottaminen()">
-            Tunnuslukujen syöttäminen
+            Tunnusluvut
           </a>
         </li>
 
