--- a/app/scripts/components/header/index.styl
+++ b/app/scripts/components/header/index.styl
@@ -46,9 +46,25 @@
     float: right
 
 
-@media (max-width: 768px)
+@media (max-width: 991px)
   .header__content
     display: none
+
+  .navbar-toggle
+    display: block
+    position: relative
+    float: right
+    padding: 9px 10px
+    margin-top: 8px
+    margin-right: 0
+    margin-bottom: 8px
+    background-color: transparent
+    background-image: none
+    border: 1px solid transparent
+    border-radius: 4px
+
+  .navbar-header
+    float: right
 
 // Statistics dropdown context styles
 .header__button.is-active
