--- a/app/scripts/components/statisticDropdown/index.html
+++ b/app/scripts/components/statisticDropdown/index.html
@@ -8,17 +8,17 @@
     <ul class="dropdown-menu">
       <li>
         <a id="tunnusluvut-valtionavustuskuvaajat" ui-sref-active="is-active" ui-sref="app.tilastot.valtionavustuskuvaajat()">
-          Valtionavustuskuvaajat
+          Valtionavustukset
         </a>
       </li>
       <li>
         <a id="tunnusluvut-tunnuslukukuvaajat" ui-sref-active="is-active" ui-sref="app.tilastot.tunnuslukukuvaajat()">
-          Tunnuslukukuvaajat
+          Perustunnusluvut
         </a>
       </li>
       <li>
         <a id="tunnusluvut-omakuvaaja" ui-sref-active="is-active" ui-sref="app.tilastot.omakuvaaja()">
-          Oma kuvaaja tunnusluvuista
+          Kaikki tunnusluvut
         </a>
       </li>
     </ul>
