--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -390,6 +390,15 @@ textarea
 .block
   display: block !important
 
+.f-12
+  font-size: 12px
+
+.f-uppercase
+  text-transform: uppercase
+
+.Ms-xxs
+  margin-left: 0.2em
+
 .hm-legend
   background-color: #f5f5f5
   width: 50%
