LIVIJUKU-883 Lisätty käyttäjille näkyvä ohjeteksti aikajanan zoomaamiseen ja vierittämiseen liittyen.

--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -393,8 +393,14 @@ textarea
 .f-12
   font-size: 12px
 
+.f-10
+  font-size: 10px
+
 .f-uppercase
   text-transform: uppercase
+
+.M-0
+  margin: 0
 
 .Ms-xxs
   margin-left: 0.2em
